made some alterations to scrollbar and changed titlebar to position:fixed instead of absolute

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -47,7 +47,7 @@ body {
 }
 
 canvas {
-  height: 100%;
+  height: 100dvh;
 }
 
 audio::-webkit-media-controls-panel {
@@ -104,29 +104,23 @@ audio::-webkit-media-controls-volume-slider {
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
-  margin: 4em;
-  padding: 3em;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(158, 221, 255);
   border-radius: 10px;
-  padding: 4rem;
+  width: 2px;
+  margin: 50px;
+  padding: 40px;
 }
 ::-webkit-scrollbar-corner {
   display: none;
 }
-::-webkit-scrollbar-track-piece {
-  margin: 4em;
-  padding: 3em;
-}
+
+/* Han
 
 /* body {
   display: flex;S
